adding viz twitter acct

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<h1><b>Wesley</b> Lindamood</h1>
 	
-	<p>I am a <a href="https://twitter.com/nprdesign">senior interaction designer</a> at NPR, and a <a href="http://letterboxd.com/lindamood/list/recommended-documentaries/">documentary film</a> and <a href="http://www.last.fm/user/constantcurve">music</a> <a href="http://www.rdio.com/people/lindamood/">obsessed</a> dad at home. Drawing upon my background in visual design, journalism and front-end development, I specialize in helping organizations turn user needs and business goals into technically elegant user experiences.</p>
+	<p>I am a <a href="https://twitter.com/nprdesign">senior interaction designer</a> at <a href="https://twitter.com/nprviz">NPR</a>, and a <a href="http://letterboxd.com/lindamood/list/recommended-documentaries/">documentary film</a> and <a href="http://www.last.fm/user/constantcurve">music</a> <a href="http://www.rdio.com/people/lindamood/">obsessed</a> dad at home. Drawing upon my background in visual design, journalism and front-end development, I specialize in helping organizations turn user needs and business goals into technically elegant user experiences.</p>
 	
 	<p>I share my thoughts about design and storytelling on <a href="http://twitter.com/lindamood">Twitter</a> and occasionally post images to <a href="http://www.flickr.com/photos/constantcurve/">Flickr</a> and <a href="http://instagram.com/constantcurve/">Instagram</a>.
 	
