updating link to kpp

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 	<p>You can learn more about my professional experience on <a href="http://www.linkedin.com/in/lindamood">LinkedIn</a> and explore samples of my work on <a href="http://dribbble.com/lindamood">Dribbble</a> and <a href="https://github.com/lindamood?tab=activity">Github</a>. I've also posted a few of my presentations to <a href="http://www.slideshare.net/w_lindamood/">SlideShare</a>.</p>
 	
-	<p>Someday, I hope that my wife, <a href="http://twitter.com/talkingbird">Laura</a>, and I can return to our neglected letterpress studio, <a href="http://www.knottypinepress.com/blog/">The Knotty Pine Press</a>.</p>
+	<p>Someday, I hope that my wife, <a href="http://twitter.com/talkingbird">Laura</a>, and I can return to our neglected letterpress studio, <a href="http://www.knottypinepress.com/">The Knotty Pine Press</a>.</p>
 	
 	<p><a href="mailto:hi@lindamood.org">Get in touch</a> with me.</p>
 </div>
