--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
         <meta name="description" content="Wesley Lindamood">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
-	
+
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	
+
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
-</head>	
-    
+</head>
+
 <body>
 
 <div id="about">
 
 	<h1><b>Wesley</b> Lindamood</h1>
-	
-	<p>I am a <a href="https://twitter.com/nprdesign">senior interaction designer</a> at <a href="https://twitter.com/nprviz">NPR</a>, and a <a href="http://letterboxd.com/lindamood/list/recommended-documentaries/">documentary film</a> and <a href="http://www.last.fm/user/constantcurve">music</a> <a href="http://www.rdio.com/people/lindamood/">obsessed</a> dad at home. Drawing upon my background in visual design, journalism and front-end development, I specialize in helping organizations turn user needs and business goals into technically elegant user experiences.</p>
-	
+
+	<p>I am a <a href="https://twitter.com/nprdesign">senior interaction designer</a> at <a href="https://twitter.com/nprviz">NPR</a>, and a <a href="http://letterboxd.com/lindamood/list/recommended-documentaries/">documentary film</a> and <a href="http://www.last.fm/user/constantcurve">music</a> obsessed dad at home. Drawing upon my background in visual design, journalism and front-end development, I specialize in helping organizations turn user needs and business goals into technically elegant user experiences.</p>
+
 	<p>I share my thoughts about design and storytelling on <a href="http://twitter.com/lindamood">Twitter</a> and occasionally post images to <a href="http://www.flickr.com/photos/constantcurve/">Flickr</a> and <a href="http://instagram.com/constantcurve/">Instagram</a>.
-	
+
 	<p>You can learn more about my professional experience on <a href="http://www.linkedin.com/in/lindamood">LinkedIn</a> and explore samples of my work on <a href="http://dribbble.com/lindamood">Dribbble</a> and <a href="https://github.com/lindamood?tab=activity">Github</a>. I've also posted a few of my presentations to <a href="http://www.slideshare.net/w_lindamood/">SlideShare</a>.</p>
-	
+
 	<p>Someday, I hope that my wife, <a href="http://twitter.com/talkingbird">Laura</a>, and I can return to our neglected letterpress studio, <a href="http://www.knottypinepress.com/">The Knotty Pine Press</a>.</p>
-	
+
 	<p><a href="mailto:hi@lindamood.org">Get in touch</a> with me.</p>
 </div>
 
@@ -56,5 +56,5 @@ g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js
 s.parentNode.insertBefore(g,s)}(document,'script'));
 
 </script>
-</body>	
+</body>
 </html>
