adding link to mastodon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     	<p>Drawing upon my background in user experience design, journalism and front-end development, I specialize in helping organizations turn user needs and business goals into technically elegant experiences. Outside of work, I am a <a href="http://letterboxd.com/lindamood/list/recommended-documentaries/">documentary film</a> and <a href="https://itunes.apple.com/profile/lindamood/">music</a> obsessed dad. </p>
 
-	<p>I share my thoughts about design and storytelling on <a href="http://twitter.com/lindamood">Twitter</a>.
+	<p>I share my thoughts about design and storytelling on <a rel="me" href="https://mastodon.social/@lindamood">Mastodon</a>.
 
 	<p>You can learn more about my professional experience on <a href="http://www.linkedin.com/in/lindamood">LinkedIn</a>, and explore samples of my work in my <a href="/portfolio/">portfolio</a> or on <a href="https://github.com/lindamood?tab=activity">Github</a>.</p>
 
